# polkadot-integration

./: Cargo.toml  README.md  build.rs  gateway_dot.key  intergraion.keys
src/: api.v1.proto  lib.rs  main.rs  schema.rs
src/behaviour/: kadelmia.rs  mod.rs  polkadot.rs  reconnect.rs
src/node_keys/: identity_key.rs  mod.rs
src/protocol/: net_protocol.rs
