[package]
name = "gateway_dot"
version = "0.1.0"
authors = ["Roshan Raghupathy"]
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.3.4"
libp2p = "0.28.1"
tokio = { version = "0.2", features = ["full"] }
sp-runtime = "2.0.0"
hex = "0.4.2"
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
prost = "0.6"
bytes = "0.4"

[build-dependencies]
prost-build = { version = "0.6" }

[[bin]]
name = "gateway_dot"
build = "build.rs"
path = "src/main.rs"
